ITS-3409 - Stop nino wrapping onto new lines (#168)
* ITS-3409 - Stop nino wrapping onto new lines

* Moved space character outside of nowrap styling

* Addressed some PR bot comments

--- a/app/assets/stylesheets/partials/save-your-nino.scss
+++ b/app/assets/stylesheets/partials/save-your-nino.scss
@@ -13,3 +13,6 @@
    text-decoration: none;
 }
 
+#nino {
+    white-space: nowrap;
+}
